# naima

./: .gitignore  .landscape.yaml  .mailmap  .travis.yml  CHANGES.rst  LICENSE.rst  MANIFEST.in  README.md  README.rst  ah_bootstrap.py  appveyor.yml  emcee_specfit.py  emcee_tools.py  ez_setup.py  onezone.py  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py  tox.ini  velax_cocoon.spec  velax_demo.py  velax_function_demo.py
.github/workflows/: examples.yaml  publish.yaml  tests.yaml
astropy-helpers/: .travis.yml  CHANGES.rst  LICENSE.rst  tox.ini
astropy-helpers/astropy_helpers/: setup_helpers.py  utils.py  version_helpers.py
astropy-helpers/astropy_helpers/tests/: test_ah_bootstrap.py
astropy_helpers/: .gitignore  setup.py
astropy_helpers/astropy_helpers/: git_helpers.py  test_helpers.py
astropy_helpers/astropy_helpers/sphinx/: conf.py
astropy_helpers/astropy_helpers/sphinx/ext/: changelog_links.py
astropy_helpers/astropy_helpers/sphinx/ext/tests/: test_docscrape.py
astropy_helpers/astropy_helpers/sphinx/local/: python3links.inv  python3links.txt
astropy_helpers/astropy_helpers/src/: setup_package.py
astropy_helpers/astropy_helpers/tests/: __init__.py  test_git_helpers.py  test_setup_helpers.py
demos/: velax_function_demo.py
docs/: MCMC.rst  Makefile  api-convenience.rst  api-mcmc.rst  api-models.rst  api-radiative.rst  api-sherpa_models.rst  api.rst  conf.py  dataformat.rst  environment.yml  examples.rst  fitting.rst  index.rst  install.rst  installation.rst  introduction.rst  mcmc.rst  radiative.rst  requirements.txt  rtd-requirements  sherpa.rst  tutorial.rst  units.rst
docs/_static/: CrabNebula_IC.py  CrabNebula_IC_results.ecsv  CrabNebula_IC_results_table.txt  RXJ1713_IC.py  RXJ1713_IC_results.ecsv  RXJ1713_IC_results_table.txt
docs/api/: api.rst  convenience.rst  radiative.rst
docs/gammafit/: index.rst
examples/: .gitignore  CrabNebula_ECPL.py  CrabNebula_HESS_2006.ecsv  CrabNebula_IC.py  CrabNebula_IC_We.py  CrabNebula_IC_minimal.py  CrabNebula_LogParabola.py  CrabNebula_PionDecay.py  CrabNebula_SynIC.py  CrabNebula_SynSSC.py  CrabNebula_ecpl.py  CrabNebula_electron.py  CrabNebula_function.py  CrabNebula_logparabola.py  CrabNebula_proton.py  CrabNebula_spectrum.ecsv  RXJ1713_HESS_2007.ecsv  RXJ1713_IC.py  RXJ1713_IC_minimal.py  RXJ1713_SynIC.py  absorbed_SynIC.py  hessj1641_electronozm_demo.py  model_examples.py  run_all_examples.sh  sherpamod.py  velax_function_demo.py
gammafit/: __init__.py  core.py  gammafit.py  models.py  onezone.py  plot.py  radiative.py  sherpamod.py  utils.py  validator.py
gammafit/data/: PionDecayKafexhiu14_LUT_Geant4.npz  PionDecayKafexhiu14_LUT_Pythia8.npz  PionDecayKafexhiu14_LUT_QGSJET.npz  PionDecayKafexhiu14_LUT_SIBYLL.npz
gammafit/examples/: hessj1641_electronozm_demo.py  hessj1641_protonozm_demo.py  velax_function_demo.py
gammafit/tests/: coveragerc  setup_package.py  test_functionfit.py  test_models.py  test_onezone.py  test_plotting.py  test_utils.py
naima/: __init__.py  _astropy_init.py  analysis.py  conftest.py  core.py  minimize.py  model_fitter.py  model_utils.py  model_widget.py  models.py  plot.py  radiative.py  sherpa_models.py  sherpamod.py  utils.py  version.py
naima/data/: tau_dominguez11.out
naima/tests/: coveragerc  fixtures.py  test_functionfit.py  test_interactive.py  test_models.py  test_modelwidget.py  test_plotting.py  test_saveread.py  test_sherpamod.py  test_utils.py
src/naima/: __init__.py  _astropy_init.py  analysis.py  core.py  model_fitter.py  model_utils.py  models.py  plot.py  radiative.py  sherpa_models.py  utils.py  version.py
src/naima/data/: PionDecayKafexhiu14_LUT_NucEnh_Pythia8.npz  tau_dominguez11.npz
src/naima/tests/: fixtures.py  test_functionfit.py  test_interactive.py  test_models.py  test_plotting.py  test_saveread.py  test_sherpamod.py  test_utils.py
tests/: conftest.py  coveragerc  setup_package.py  test_functionfit.py  test_interactive.py  test_models.py  test_plotting.py  test_saveread.py  test_sherpamod.py  test_utils.py
