[project]
name = "naima"
description = "Derivation of non-thermal particle distributions through MCMC spectral fitting"
readme = "README.rst"
license = "MIT"
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = [
        "astropy>=6.0",
        "emcee",
        "corner",
        "matplotlib>=1.4.0",
        "scipy",
        "h5py",
        "pyyaml",
]

[tool.hatch.version]
source = "vcs"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["naima"]

[tool.hatch.build.hooks.vcs]
version-file = "src/naima/version.py"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
