[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build

[ah_bootstrap]
auto_use = True

[metadata]
package_name = naima
description = Derivation of non-thermal particle distributions through MCMC spectral fitting
author = Victor Zabalza
author_email = vzabalza@gmail.com
license = BSD
url = http://github.com/zblz/naima
edit_on_github = False
github_project = zblz/naima
